--- a/src/tweeter/package.json
+++ b/src/tweeter/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "lodash": "^4.17.10",
+    "nice-lambda": "^1.0.0",
     "twit": "^2.2.10"
   }
 }
